--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
 body {
-  font-family: "Roboto", "Arial" sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 22px;
 /*  color: #ffffff; пока без фона*/
   font-weight: 500;
+    /*ВРЕМЕННО*/
+  background-color: #9aaea3;
 }
 h1 {
   font-size: 35px;
@@ -13,3 +19,317 @@ h2 {
   font-size: 24px;
   line-height: 30px;
 }
+.container {
+  box-sizing: content-box;
+  min-width: 860px;
+  max-width: 1146px;
+  margin: 0 auto;
+  padding: 0 2.3%;
+
+}
+.clearfix::after {
+  display: table;
+  content: "";
+  clear: both;
+}
+/*Gllacy INDEX*/
+
+/*HEADER INDEX*/
+
+.header-logo {
+  float: left;
+  margin-top: 9px;
+  margin-right: 11px;
+}
+.main-navigation {
+  float: left;
+  margin-top: 27px;
+}
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+}
+.main-navigation li {
+  display: inline-block;
+  margin-right: 29px;
+
+  vertical-align: top;
+}
+.user-block {
+  float: right;
+  margin-top: 23px;
+  margin-bottom: 15px;
+}
+.user-block a {
+  margin-left: 10px;
+}
+
+/*MAIN INDEX*/
+
+.index-working-hours {
+  float: right;
+  margin-bottom: 275px;
+}
+.index-working-hours p {
+  margin: 0;
+}
+.slider-logo {
+  width: 670px;
+  margin: 0 auto;
+  margin-bottom: 22px;
+}
+.slider-btn {
+  display: block;
+  width: 278px;
+  margin: 0 auto;
+  margin-bottom: 41px;
+}
+.banners {
+  margin-bottom: 40px;
+}
+.banners-first {
+  float: left;
+  width: 48.9%;
+}
+.banners-second {
+  float: right;
+  width: 48.9%;
+}
+.banners-tagline {
+  margin: 0;
+  margin-top: 17px;
+  margin-bottom: 18px;
+}
+.banners-promo {
+  margin-bottom: 23px;
+}
+.banners a {
+  float: right;
+  margin-right: 20px;
+}
+.hits {
+  margin-bottom: 35px;
+}
+.hits section {
+  float: left;
+  width: 23.35%;
+  margin-right: 2.2%;
+}
+.hits section:last-child {
+  margin-right: 0;
+}
+.hits-image {
+  margin-bottom: 11px;
+}
+.hits-image img {
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
+}
+.gllace-about{
+  min-width: 860px;
+  max-width: 1146px;
+  margin-bottom: 40px;
+}
+.gllace-about h3 {
+  margin-top: 24px;
+  margin-bottom: 23px;
+}
+.gllace-advantage {
+  float: left;
+  width: 48.9%;
+  margin: 0;
+  min-height: 122px;
+}
+.gllace-advantage:nth-child(2n-2) {
+  margin-right: 2.2%;
+}
+.blog-news {
+  float: left;
+  width: 48.9%;
+  padding-left: 20px;
+  margin-bottom: 40px;
+  box-sizing: border-box;
+}
+.blog-news-title {
+  margin-top: 22px;
+  margin-bottom: 5px;
+}
+.blog-news-item {
+  width: 300px;
+  margin-top: 0;
+  margin-bottom: 110px;
+}
+.delivery {
+  float: right;
+  width: 48.9%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.delivery form {
+  padding-left: 20px;
+}
+.delivery p {
+  margin-top: 27px;
+  margin-bottom: 35px;
+}
+.delivery input {
+  width: 66.9%;
+  margin-right: 10px;
+}
+.delivery button {
+  margin-bottom: 35px;
+}
+.map-block {
+  position: relative;
+  background: url("../img/map.jpg") no-repeat;
+  background-position: 30% 50%;
+  margin-left: -2.3%;
+  margin-right: -2.3%;
+}
+.map {
+  min-width: 900px;
+  max-width: 100%;
+  height: 430px;
+}
+.feedback {
+  position: relative;
+  right: 2.3%;
+
+  float: right;
+  box-sizing: border-box;
+  width: 302px;
+  margin-top: 62px;
+  padding-top: 27px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 30px;
+
+  background-color: #fffffe;
+  border-radius: 5%;
+}
+.feedback p:nth-child(2) {
+  margin-bottom: 15px;
+}
+
+/*INDEX FOOTER*/
+
+.social-block {
+  float: left;
+  margin-top: 36px;
+  width: 23.35%;
+  margin-right: 11.6%;
+}
+.social-block a {
+  margin-right: 10px;
+}
+.helpful-information {
+  float: left;
+  width: 347px;
+  margin-top: 32px;
+  padding: 0;
+}
+.helpful-information li {
+  float: left;
+  display: block;
+  width: 50%;
+}
+.copyright {
+  float: right;
+  width: 189px;
+  margin-top: 19px;
+}
+.copyright img {
+  margin-bottom: 4px;
+  padding-right: 80px;
+}
+.copyright p {
+  float: right;
+  margin: 0;
+  margin-bottom: 22px;
+}
+
+/*GLLACY CATALOG хедер-копия индекс*/
+/*MAIN*/
+.breadcrumbs {
+  float: left;
+  width: 267px;
+  margin-bottom: 5px;
+}
+.breadcrumbs ul {
+  padding: 0;
+}
+.breadcrumbs li {
+  display: inline-block;
+  vertical-align: top;
+}
+.cataog-working-hours {
+  float: right;
+  width: 165px;
+}
+.cataog-working-hours p {
+  margin: 0;
+}
+.catalog-main-title {
+  margin: 0;
+  margin-bottom: 32px;
+}
+.price-sort {
+  display: inline-block;
+  vertical-align: top;
+  width: 193px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  margin-right: 16px;
+  margin-bottom: 13px;
+}
+.price-range {
+  display: inline-block;
+  vertical-align: top;
+  width: 218px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  margin-right: 15px;
+}
+.fat-range {
+  display: inline-block;
+  vertical-align: top;
+  width: 415px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.filler {
+  display: inline-block;
+  vertical-align: top;
+  width: 702px;
+  margin-right: 14px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  margin-bottom: 34px;
+}
+.main-filter button {
+  display: inline-block;
+  vertical-align: top;
+  width: 144px;
+}
+.cremy-item section {
+  float: left;
+  width: 23.35%;
+  min-height: 362px;
+  margin-right: 2.2%;
+}
+.cremy-item section:nth-child(4n) {
+  margin-right: 0;
+}
+.catalog-pages {
+  float: right;
+  width: 267px;
+  margin-top: 42px;
+  margin-bottom: 30px;
+}
+
